Update book summary description

--- a/doc/prez/book/.chapter.md
+++ b/doc/prez/book/.chapter.md
@@ -3,3 +3,10 @@ slug: book
 title: Book summary
 static: img
 ---
+
+# Book summary
+
+This is a summary of [The Rust Programming Language][1].  
+This summary is only done for quick access to syntax & examples.  This is not a replacement of the original book :)
+
+[1]: https://doc.rust-lang.org/book/index.html
