--- a/doc/prez/book/.chapter.md
+++ b/doc/prez/book/.chapter.md
@@ -8,6 +8,8 @@ menu: [main]
 # Book summary
 
 This is a summary of [The Rust Programming Language][1].  
-This summary is only done for quick access to syntax & examples.  This is not a replacement of the original book :)
+This summary is only done for quick access to syntax & examples.  This is not a replacement of the original book :)  
+I known that there are some other ressources, like _[Rust by example]_, but writing it let me learn it ;-)
 
 [1]: https://doc.rust-lang.org/book/index.html
+[2]: https://doc.rust-lang.org/rust-by-example/index.html
